--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MyCookBook</string>
-    <string name="title_activity_save_recipe">SaveRecipe</string>
+    <string name="app_name" translatable="false">My Cook Book</string>
+    <string name="title_activity_save_recipe" translatable="false">Save Recipe</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -13,14 +13,18 @@
 
     <!-- menu section-->
     <string name="showList">My Recipes</string>
-    <string name="logOff">Log off</string>
+    <string name="logOff">Log Off</string>
+    <string name="language">Language</string>
+    <string name="english">English</string>
+    <string name="hebrew">Hebrew</string>
 
 
     <!--Save action section-->
-    <string name="saveHeader">Enter recipe header</string>
-    <string name="saveUri">Selected Uri</string>
-    <string name="saveDescription">Recipe Description</string>
-    <string name="saveAccept">Save</string>
+    <string name="saveHeader" translatable="false">Header</string>
+    <string name="saveUri" translatable="false">Uri</string>
+    <string name="saveDescription" translatable="false">Recipe Description</string>
+    <string name="saveAccept" translatable="false">Save</string>
+    <string name="saveUpdate" translatable="false">Update</string>
     <string name="saveDiscard">Cancel</string>
     <string name="saveCourses">Course Type</string>
     <string name="saveDiets">Diet Type</string>
