--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -15,6 +15,7 @@
     <!-- menu section-->
     <string name="showList">המתכונים שלי</string>
     <string name="logOff">התנתק</string>
+    <string name="login">התחבר</string>
     <string name="language">שפות</string>
     <string name="english">אנגלית</string>
     <string name="hebrew">עברית</string>
