--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <!-- menu section-->
     <string name="showList">My Recipes</string>
     <string name="logOff">Log Off</string>
+    <string name="login">Log In</string>
     <string name="language">Language</string>
     <string name="english">English</string>
     <string name="hebrew">Hebrew</string>
