--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,7 @@
 
     <!--Display Action section-->
     <string name="displayBack">Back</string>
+    <string name="displayHead">Serch in header</string>
+    <string name="displayTagsLabel"> tags</string>
 
 </resources>
