--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <!--login page-->
+    <string name="loginGoogle">Login with Google</string>
+
 
     <!-- menu section-->
     <string name="showList">My Recipes</string>
