--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,11 @@
     <string name="displayHead">Serch in header</string>
     <string name="displayTagsLabel"> tags</string>
 
+    <!--    tools file-->
+    <string name="tools_file_name">user_tools</string>
+    <string name="user_name">name</string>
+    <string name="user_lang">lang</string>
+    <string name="is_refresh">false</string>
+
+
 </resources>
