Fifth reject UX

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -43,6 +43,7 @@
         <item>תוספות</item>
         <item>סלט</item>
         <item>קינוח</item>
+        <item>מאפים</item>
     </string-array>
     <string-array name="saveDiet">
         <item>סוג...</item>
