--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
         <item>Extras</item>
         <item>Salad</item>
         <item>Dessert</item>
+        <item>Bakery</item>
     </string-array>
     <string-array name="saveDiet">
         <item>Diet...</item>
