--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,10 @@
     <string name="displayBack">Back</string>
     <string name="displayHead">Serch in header</string>
     <string name="displayTagsLabel"> tags</string>
+    <string name="delete_alert_title">Delete recipe</string>
+    <string name="delete_alert_message">Are you sure you want to delete this recipe?</string>
+    <string name="yes">yes</string>
+    <string name="no">no</string>
 
     <!--    tools file-->
     <string name="tools_file_name">user_tools</string>
@@ -65,5 +69,12 @@
     <string name="user_lang">lang</string>
     <string name="is_refresh">false</string>
 
+    <!--    main explaination-->
+    <string name="first_sen">1. Open a recipe on chrome or on youtube</string>
+    <string name="sec_sen">2. Select share option</string>
+    <string name="thr_sen">3. Select this application - my cook book</string>
+    <string name="four_sen">4. Save the recipe</string>
+    <string name="good_luck">Good luck! Go to cook :)</string>
+    <string name="welcom">Welcom to - My Cook Book!!</string>
 
 </resources>
