Adding Manual recipes ability software start

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -23,6 +23,7 @@
     <string name="language">שפות</string>
     <string name="english">אנגלית</string>
     <string name="hebrew">עברית</string>
+    <string name="addRecipe">צור מתכון</string>
 
 
     <!--Save action section-->
